# pyrust-template

./: .pre-commit-config.yaml  Cargo.toml  README.md  pyproject.toml
.github/workflows/: CI.yml
pyrust-lib/: Cargo.toml
pyrust-lib/src/: lib.rs
pyrust-py/: Cargo.toml  pyproject.toml
pyrust-py/python/pyrust_py/: __init__.py  pyrust_py.pyi
pyrust-py/src/: lib.rs
pyrust-py/tests/: test_integration.rs
pyrust-rs/: Cargo.toml
pyrust-rs/src/: main.rs
python/pyrust_template/: __init__.py
python/tests/: test_all.py
src/: lib.rs
tests/: test_all.py
