[package]
name = "pyrust-py"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pyrust_py"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.20.2" }
pyrust-lib = { path = "../pyrust-lib" }

[dev-dependencies]
pyo3 = { version = "0.20.2", features = ["auto-initialize"] }

[build-dependencies]
version_check = "0.9.4"

[features]
extension-module = ["pyo3/extension-module"]
# default = ["extension-module"]
