[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "pyrust-py"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

[project.optional-dependencies]
tests = ["pytest"]

[tool.maturin]
python-source = "python"
# module-name = "pyrust_py._pyrust_py"
bindings = "pyo3"
features = ["pyo3/extension-module", "pyo3/experimental-inspect"]
